Update openapi
